reloading librairies doesn't update node groups #49991

Closed
opened 2016-11-11 12:53:56 +01:00 by mathieu menuet · 11 comments

System Information
Windows 7 x64 has the crash, but the node not updating also happen on Linux.

Blender Version
Broken: 2.78a

Short description of error
When trying to reload a librairy with node groups, Blender either crash or doesn't update the node.

Exact steps for others to reproduce the error
Open both files : bug reload with linked node group.blend and bug reload node group.blend
Remove one input in the node group from "bug reload node group.blend"
In "bug reload with linked node group.blend", right click on the lib and reload the lib. Blender crashes (on windows, but not always it seems) or the lib is not updated.

**System Information** Windows 7 x64 has the crash, but the node not updating also happen on Linux. **Blender Version** Broken: 2.78a **Short description of error** When trying to reload a librairy with node groups, Blender either crash or doesn't update the node. **Exact steps for others to reproduce the error** Open both files : [bug reload with linked node group.blend](https://archive.blender.org/developer/F397288/bug_reload_with_linked_node_group.blend) and [bug reload node group.blend](https://archive.blender.org/developer/F397289/bug_reload_node_group.blend) Remove one input in the node group from "bug reload node group.blend" In "bug reload with linked node group.blend", right click on the lib and reload the lib. Blender crashes (on windows, but not always it seems) or the lib is not updated.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Bastien Montagne was assigned by mathieu menuet 2016-11-11 12:54:21 +01:00
Author

Reloading the whole Blend file works as expected.

Reloading the whole Blend file works as expected.

Did you check this is still happening with master?

Did you check this is still happening with master?
Author

yes still happen:

LILib, D:\test blender\bug reload node group.blend
Error: EXCEPTION_ACCESS_VIOLATION
yes still happen: ``` LILib, D:\test blender\bug reload node group.blend Error: EXCEPTION_ACCESS_VIOLATION ```
Author

@mont29 but only on windows, Linux just doesn't really reload/update the node group.

@mont29 but only on windows, Linux just doesn't really reload/update the node group.

Issue confirmed, crash happens in blend writefile code (for undo step right after reloading lib)…

Think there are more than one issue here though, nodes are really tricky to handle correctly :/

Issue confirmed, crash happens in blend writefile code (for undo step right after reloading lib)… Think there are more than one issue here though, nodes are really tricky to handle correctly :/

PS: release builds on linux tend to be much, much robust to invalid memory access than windows ones, but here with debug build and asan enabled, it crashes everytime ;)

PS: release builds on linux tend to be much, much robust to invalid memory access than windows ones, but here with debug build and asan enabled, it crashes everytime ;)

This issue was referenced by 369872a2c5

This issue was referenced by 369872a2c50e95eee822512018cc282ef5fcfdd1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

@mont29 thanks for the fix. It is also my feeling that Linux Builds crashes much less. At least in this case, windows help get a cleaner code :)

@mont29 thanks for the fix. It is also my feeling that Linux Builds crashes much less. At least in this case, windows help get a cleaner code :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49991
No description provided.